modificacion de entity materias

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
@@ -33,8 +33,8 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">   
-                    <p:column headerText="Nombre" filterBy="#{car.idAlumno.nombreCompleto}" filterable="true" filterMatchMode="contains">
-                        #{car.idAlumno.nombreCompleto}
+                    <p:column headerText="Nombre" filterBy="#{car.maNombre}" filterable="true" filterMatchMode="contains">
+                        #{car.maNombre}
                     </p:column>
                     <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         #{formatoPantallas.campo15}
