modificacion de guardado

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
@@ -35,8 +35,8 @@
                 <p:panelGrid columns="2" class="Container50 Responsive">
                     <p:outputLabel  value="Coordinador: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu  class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maCoordinador}">
-                        <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo300} "/>
-                        <f:selectItem itemValue ="1" itemLabel="Carlos"/>
+                        <f:selectItem itemValue ="0" itemLabel="Juan Rivera"/>
+                        <f:selectItem itemValue ="1" itemLabel="Carlos Valencia"/>
                     </p:selectOneMenu>
                     <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maTurno}">
