--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
@@ -18,10 +18,10 @@
         <div class="EmptyBox5"></div>
         <p:panel>
            <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+<!--                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>                    
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>                    -->
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
                         <p:outputLabel for="mod_carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
